css/styles.css
@charset "UTF-8";
/* CSS Document */

/*  
Version: 1.0
@Author: Mitchell Thompson
@Author URI: http://www.mitchlthompson.com
*/

html {
    font-size: 1em;
}
body, body * {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
    line-height: 1.4;
    font-weight: 400;
    line-height: 1.45;
    font-family: "Molot", sans-serif, Arial, Helvetica, sans-serif;
/*    font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;   */
}
p {margin-bottom: 1.3em;}

h1, h2, h3, h4 {
  margin: 1.414em 0 0.5em;
  font-weight:bolder;
  line-height: 1.2;
  font-family: "Molot", sans-serif;
}

h1 {
  margin-top: 0;
  font-size: 5.063em;
}

h2 {font-size: 3.375em;}

h3 {font-size: 2.25em;}

h4 {
    font-size: 1.5em;
}

small, .font_small {
    font-size: 0.667em;
}
a img {
	border: 0;
}
a:hover, a:visited, a:link, a:active {
    text-decoration: none;
}
p {
    font-size: 1em;
    color:#2C3E50;
}

/** header/nav **/
.navbar-nav {
    width: 100%;
}
.navbar-nav li {
      float: none;
      display: inline-block;
}
.navbar {
    border-radius: 0;
    border: 0;

}
.navbar-custom {
    background-color: #2C3E50;
    min-height:50px;
}
@media (min-width: 780px) {
    .navbar-custom {
    }
}
.navbar.navbar-default.navbar-custom li a {
    color:white;
    font-family: "Molot", sans-serif;
    font-weight:normal;
}
.navbar ul {
    font-size: 1.6em;
}
@media (max-width: 450px) {
    .navbar.navbar-default.navbar-custom li a {
        font-size: 1em;
    }
    .header {
        height:60px;
    }
    .navbar-nav {
        text-align: center;
        margin-left:1%;
    }
}
.navbar-default .navbar-collapse, .navbar-default .navbar-form {
    background-color: #2C3E50;
}
.header {
    max-width: 1200px;
    height:55px;
}
/** boxes **/
.box {
    max-width:900px;
    border-radius: 3px;
    padding:3% 3% 3% 3%;
}
.jumbotron {
    background-color:white;
    padding-top: 20px;
}
.boxes {
    border-top: solid 2px #2C3E50;
}
/** about  **/
.about {
    padding:3%;
}
.about a {
    text-decoration: none !important;;
}
a.hire {
    background-color: #2C3E50;
    margin-top:6%;
    border-radius: 0;
    text-decoration: none !important;
    font-weight:bold;
}
a.hire:hover, a.hire:visited, a.hire:link, a.hire:active {
    text-decoration: none !important;
}
}
.box a {
    color: #90D5FD;
}
.intro {
    padding-top: 25px;
}
.about h2 {
    margin-top: 0;
    margin-bottom: 0;
}

/** Skills  **/
.skills h2 {
    margin-top: -10px;
}
ul.skill_list {
    margin-top: 20px;
    margin-bottom: 30px
}
ul.skill_list li {
    margin-right: 25px;
}
@media (max-width: 560px) {
    .skills h2 {
    text-align: left;
    font-size: 3em;
    }
    .skills p {
    text-align: left;
    font-size: 1.3em;
    }
    ul.skill_list li {
    text-align: left;
    font-size: .8em;
    margin-right: 15px;    
    }
}
/** Projects  **/
.box-3 h2 {
    margin-top: -10px;
}
.modal-content {
    background-color:#ECF0F1;
}
.project .img-responsive {
    margin: 0 auto;
    border: 1px solid black;
}
.project h3 {
    font-weight: normal;
}
.modal p {
    text-align: left;
}
.live-project {
    margin-bottom:10px;
}
.live-project {
    background-color:#2C3E50;
    color:white;
}
.modal-body img {
    margin-bottom: 10px;
    border: 1px solid black;
}
.modal-body h4 {
    margin-top:10px;
}
.modal-body ul {
    margin-top:10px;
    margin-bottom: 20px;
}
.modal-body li {
    display: inline;
    margin-right:10px;
}
.modal-body p {
    margin-top:20px;
}
.views button {
    background-color:#2C3E50;
    margin: 10px 0 10px 0;
}
/** Contact  **/
.self {
    margin-bottom:10px;
    display:block;
    width: 45%;
}
.contact img {
    margin-bottom: 15px;
}
@media (min-width:790px and max-width:990px) {
    .fa {
    padding-right:30px;
}
}
/** Need a website contact  **/
.box-5 h2 {
    margin-top: -10px;
}
.contact-website p {
    padding-bottom: 30px;
}
.contact-website p span {
    font-weight: bold;
}

/** hire-me  **/
.hire-me ul li a {
    font-size:1.5em;
    color: black;
}
ul.resume li {
    display:inline;
    margin:5px;
}
.hire-me ul li p {
    font-size:1.5em;
    color: black;
    margin-bottom: 2px;
    text-decoration: underline;
}
.hire-me ul {
    margin-bottom: 15px;
}
@media (min-width:790px and max-width:990px) {
    .fa {
    padding-right:30px;
}
}
/** footer **/
footer {
    border-top: solid 2px #2C3E50;
    margin-bottom: 30px;
    padding-top:15px;
}
.back a {
    color: #2C3E50;
å
}
.back li {
    list-style: none;
    display: inline;
    margin-right: 15px;
    font-size: 1.5em;
}
@media (max-width:992px) {
    .footer-nav li {
        display:block;
    }
}
@media (max-width:770px) {
    .back ul {
        margin-top: 25px;
        text-align: center;
    }
}

@font-face{
    font-family: "Molot";
    src: url('./fonts/Molot.otf');
}

